# recipebook

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Design.txt  README.md  RecipeBook.sln  TODO.txt
Examples/: default_data.json
android/: AndroidManifest.xml  android_release.keystore
librecipebook/: CMakeLists.txt
librecipebook/include/data/: AlternativesType.h  Amount.h  Category.h  GoShoppingListItem.h  Ingredient.h  Recipe.h  RecipeBook.h  RecipeBookConfigItem.h  RecipeBookConfiguration.h  RecipeItem.h  ShoppingListItem.h  ShoppingRecipe.h  Size.h  SortOrder.h  SortedShoppingList.h  SortedShoppingListOrdering.h  Status.h  Unit.h
librecipebook/include/serialization/: IRecipeBookSerializer.h  RecipeBookSerializerFactory.h
librecipebook/include/synchronization/: RecipebookDropbox.h
librecipebook/src/data/: Amount.cpp  GoShoppingListItem.cpp  Ingredient.cpp  ItemsUtil.h  RBDataHandler.cpp  Recipe.cpp  RecipeBook.cpp  RecipeBookConfigItem.cpp  RecipeBookConfiguration.cpp  RecipeItem.cpp  ShoppingListItem.cpp  ShoppingRecipe.cpp  SortOrder.cpp  SortedShoppingList.cpp  Unit.cpp
librecipebook/src/serialization/: RecipeBookSerializerFactory.cpp  StringConverter.cpp  StringConverter.h
librecipebook/src/serialization/json/: JsonFormatConstantsV1.h  JsonFormatConstantsV2.h  JsonGlobalConstants.h  RecipeBookJsonReader.cpp  RecipeBookJsonReader.h  RecipeBookJsonReaderV1.cpp  RecipeBookJsonReaderV1.h  RecipeBookJsonReaderV2.cpp  RecipeBookJsonReaderV2.h  RecipeBookJsonWriter.cpp  RecipeBookJsonWriter.h
librecipebook/src/synchronization/: RecipebookDropbox.cpp
rbunittests/: CMakeLists.txt  rbunittests.qrc
rbunittests/src/: RBUnitTests.cpp  RBUnitTests.h
rbunittests/testdata/SerializeTest/: test.json  test_rbconfigs.json
recipebookgui/: CMakeLists.txt  recipebookandroid.qrc  recipebookdesktop.qrc  recipebookgui.qrc
recipebookgui/icon/: icon.rc
recipebookgui/qml/android/: SettingsDialog.qml  recipebook.qml
recipebookgui/qml/android/recipebookstab/: RbConfigContentPage.qml  RbConfigDetailsPage.qml  RecipebooksTab.qml
recipebookgui/qml/android/recipestab/: AlternativesTypesPage.qml  CategoriesPage.qml  IngredientsPage.qml  RecipeDetailsPane.qml  RecipeItemsPane.qml  RecipesPage.qml
recipebookgui/qml/android/shoppingtab/: GoShoppingPage.qml  ShoppingListPage.qml
recipebookgui/qml/components/: AddRecipesListDialog.qml  AppDlgInterface.qml  AppSyncUI.qml  DatePicker.qml  DateSelectionDialog.qml  EditItemsListDialog.qml  InputFromListDialog.qml  SpinnerInputDialog.qml  TextInputDialog.qml  TextMessageDialog.qml
recipebookgui/qml/desktop/: SettingsDialog.qml  recipebook.qml
recipebookgui/qml/desktop/recipebookstab/: RbConfigPage.qml
recipebookgui/qml/desktop/recipestab/: AlternativesTypesPage.qml  CategoriesPage.qml  IngredientsPage.qml  RecipesPage.qml
recipebookgui/qml/desktop/shoppingtab/: GoShoppingPage.qml  ShoppingListPage.qml
recipebookgui/resources/: DefaultRecipeBook.json
recipebookgui/resources/qml-android/: SettingsDialog.qml  recipebook.qml
recipebookgui/resources/qml-android/recipebookstab/: RbConfigPage.qml  RecipebooksTab.qml
recipebookgui/resources/qml-android/recipestab/: AlternativesTypesPage.qml  CategoriesPage.qml  IngredientsPage.qml  RecipesPage.qml  RecipesTab.qml
recipebookgui/resources/qml-android/shoppingtab/: GoShoppingPage.qml  ShoppingListPage.qml  ShoppingTab.qml
recipebookgui/resources/qml-desktop/dialogs/: DateSelectionDialog.qml  EditAlternativesGroupPane.qml  EditItemsListDialog.qml
recipebookgui/resources/qml-desktop/recipebookstab/: RbConfigPage.qml
recipebookgui/resources/qml-desktop/recipestab/: AlternativesTypesPage.qml  IngredientsPage.qml  RecipesPage.qml
recipebookgui/resources/qml-desktop/shoppingtab/: ShoppingTab.qml
recipebookgui/resources/qml-win/: recipebook.qml  settingsDialog.qml
recipebookgui/resources/qml-win/recipebookstab/: recipebooksTab.qml
recipebookgui/resources/qml-win/recipestab/: categoriesPage.qml  ingredientsPage.qml  recipesPage.qml
recipebookgui/resources/qml-win/shoppingtab/: shoppingListPage.qml
recipebookgui/src/: RBDialogInterface.cpp  RBDialogInterface.h  RBTranslationManager.cpp  RBTranslationManager.h  RecipeBookSettings.cpp  RecipeBookSettings.h  RecipeBookSynchronization.cpp  RecipeBookSynchronization.h  RecipeBookUIContext.cpp  RecipeBookUIContext.h  main.cpp  uistringconverter.cpp  uistringconverter.h
recipebookgui/src/exporter/: LatexLanguageManager.cpp  LatexLanguageManager.h  LibHaruCommon.h  RBLatexExporter.cpp  RBLatexExporter.h  RecipeBookExporter.cpp  RecipeBookExporter.h  RecipeBookExporterLatex.cpp  RecipeBookExporterLatex.h  RecipeBookExporterLibHaru.cpp  RecipeBookExporterLibHaru.h  RecipeBookExporterPodofo.cpp  RecipeBookExporterPodofo.h  ShoppingListExporter.cpp  ShoppingListExporter.h  ShoppingListExporterLatex.cpp  ShoppingListExporterLatex.h  ShoppingListExporterLibHaru.cpp  ShoppingListExporterLibHaru.h  ShoppingListExporterPodofo.cpp  ShoppingListExporterPodofo.h  podofo.h
recipebookgui/src/model/: FilterModelAlternativesTypes.h  FilterModelIngredients.cpp  FilterModelIngredients.h  FilterModelRecipeItems.cpp  FilterModelUnusedRecipes.cpp  ListModelAlternativesGroups.cpp  ListModelCategories.cpp  ListModelCategories.h  ListModelGoShopping.cpp  ListModelGoShopping.h  ListModelIngredients.cpp  ListModelIngredients.h  ListModelRBConfigItems.cpp  ListModelRBConfigItems.h  ListModelRecipeBookConfigurations.cpp  ListModelRecipeBookConfigurations.h  ListModelRecipeItems.cpp  ListModelRecipeItems.h  ListModelRecipes.cpp  ListModelShoppingListItems.cpp  ListModelShoppingListItems.h  ListModelShoppingRecipes.cpp  ListModelShoppingRecipes.h  ListModelSortOrders.cpp  SortModelSortOrder.cpp
recipebookgui/src/synchronization/: RecipeBookChanges.cpp  RecipeBookChanges.h  RecipeBookConflicts.cpp  RecipeBookConflicts.h  RecipeBookSynchronization.cpp  RecipeBookSynchronization.h
recipebookgui/translations/: recipebookgui_de.qm  recipebookgui_de.ts  recipebookgui_en.qm  recipebookgui_en.ts
src/: RecipeBook.vcxproj  RecipeBook.vcxproj.filters  (+1 more)
(+200 files in other folders)
